--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /*  your css code here. If applicable */
+.example{
+	color: #00f;
+	background: #eee;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	
+}
