--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-.example{
+.selector{
 	color: #00f;
 	background: #eee;
 	font-family: Arial, Helvetica, sans-serif;
